--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,11 +5,15 @@
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@theme {
+  --breakpoint-*: initial;
+  --breakpoint-sm: 480px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 976px;
+  --color-twitter-blue: #1DA1F2;
+  --color-custom-blue: #092A41;
+  
+  
 }
 
 @media (prefers-color-scheme: dark) {
