--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,7 +24,7 @@
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background: #d5f7ff;
+  color: black;
   font-family: Arial, Helvetica, sans-serif;
 }
